--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -8,7 +8,7 @@
         <mat-divider style="background-color: rgba(255, 255, 255, 0.2) !important;"></mat-divider>
       </a>
 
-      <a mat-list-item (click)="toggleSubMenuCadastro()" class="text-white fcolor" style="height: 50px; font-size: 0.7rem !important;">
+      <a *ngIf="showCadastros" mat-list-item (click)="toggleSubMenuCadastro()" class="text-white fcolor" style="height: 50px; font-size: 0.7rem !important;">
         <i class="fa fa-pencil mr-2 color-icons" mat-list-icon></i>
         Cadastros
         <mat-icon *ngIf="!showSubMenuCadastro">chevron_right</mat-icon>
