ajustes na tela home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="container-fluid my-3" id="container-dashboard-aluno" style="display: none">
+  <h1>Bem vindo!</h1>
+</div>
 <div class="container-fluid my-3" id="container-dashboard" style="display: none">
 
   <div class="row m-0">
@@ -49,7 +52,7 @@
 
       <div class="col-md-3 p-0 container-card mat-elevation-z5 border-success">
         <div class="d-flex flex-row text-center body-card">
-          <i class="fa fa-5x fa-check text-success" style="width: 30%"></i> 
+          <i class="fa fa-5x fa-check text-success" style="width: 30%"></i>
           <div style="width: 70%">
             <h6>Empréstimos Finalizados</h6>
             <p class="content-card text-success">{{dashEmprestimoCount?.finalizado}}</p>
